[package]
name = "supervisor"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "sync",
    "process",
    "fs",
    "io-util",
    "macros",
] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
